test/should-fail/逻辑错误-1.j
function test takes nothing returns nothing
    if then
    endif
endfunction